@@ -33,6 +33,7 @@
 15. Make playqueue search consisten with view search - ie. only show search on
     activating 'Search Play Queue', do not toggle.
 16. Initial MacOS port - thanks to Ian Scott
+17. Online services support does not require taglib.
 
 1.1.3
 -----
